// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components - chains - LN10_Caja_canal Tests cases for different layouts should return five articles with layout canal_1_4_grid 1`] = `
<div>
  <div>
    <div
      class="hidden"
      data-module="tema_00"
      id="c0fwX0hVZJbN0f"
    >
      <section
        data-block-name="h_tema-00"
        data-chain-id="c0fwX0hVZJbN0f"
        data-chain-position="00"
        data-diagramacion-id="canal_1_4_grid"
        data-is-block="true"
        data-mrf-recirculation="h_tema-00"
        data-roof="N/A"
        id="tema_00"
      >
        <div
          class="ln-roof --generic"
          roof-container="roof-container"
        >
          <div
            class="--ln-roof-full pt-24 flex jc-between"
          >
            <div
              class="--ln-roof-left"
            >
              <div
                class="flex uppercase ai-center"
                roof-group="left"
                target="_blank"
              >
                <h3
                  class="text ln-text --roof-title --prumo --font-l"
                >
                  Bienestar
                </h3>
              </div>
            </div>
            <div
              class="--ln-roof-right flex overflow-hidden h-100 min-h-36 --generico jc-end ai-center"
              roof-group="right"
            />
          </div>
        </div>
        <section
          class="ln-bngrid pb-16 --canal_1_4_grid --bienestar"
        >
          <div
            class="grid container-op-top grid --grid-cols-8 --grid-cols-md-12 --grid-cols-lg-12 --grid-cols-xl-12 --gap-sm --grid-ai-stretch"
          >
            <div
              class="grid-item --0 --col-8 --col-md-12 --col-lg-12 --col-xl-12"
            >
              <article
                class="ln-card flex flex-column ai-start --3xl --regular --no-media --tablet-img-left --desktop-img-left"
                data-id="NSKVK2X7S5FG3MIEEHV4WN6ZI4"
                data-notaid="NSKVK2X7S5FG3MIEEHV4WN6ZI4"
                data-pos="0001"
                data-source="editor"
              >
                <a
                  class="link ln-link flex flex-column --unstyled"
                  href="/sociedad/comunidad/elefante-azul-la-tragica-historia-detras-del-imponente-edificio-abandonado-en-saavedra-nid22042021/"
                  target="_self"
                  title="Elefante Azul: la trágica historia detrás del imponente edificio abandonado en Saavedra"
                >
                  <section
                    class="description-container relative flex flex-column"
                    href="/sociedad/comunidad/elefante-azul-la-tragica-historia-detras-del-imponente-edificio-abandonado-en-saavedra-nid22042021/"
                  >
                    <h2
                      class="text ln-text title --prumo --font-medium --font-3xl"
                    >
                      Elefante Azul: la trágica historia detrás del imponente edificio abandonado en Saavedra
                    </h2>
                  </section>
                </a>
              </article>
            </div>
            <div
              class="grid-item --1 --col-8 --col-md-3 --col-lg-3 --col-xl-3"
            >
              <article
                class="ln-card flex flex-column ai-start --m-l --regular"
                data-id="6LWA56W2Q5CTLKNU7UEBLABMM4"
                data-notaid="6LWA56W2Q5CTLKNU7UEBLABMM4"
                data-pos="0002"
                data-source="editor"
              >
                <a
                  class="link ln-link flex flex-column --unstyled"
                  href="/politica/coronavirus-la-sorpresa-negativa-que-suma-incertidumbre-al-escenario-mundial-nid16032021/"
                  target="_self"
                  title="Coronavirus, la sorpresa negativa que suma incertidumbre al escenario mundial"
                >
                  <section
                    class="media-container"
                    href="/politica/coronavirus-la-sorpresa-negativa-que-suma-incertidumbre-al-escenario-mundial-nid16032021/"
                    title="Coronavirus, la sorpresa negativa que suma incertidumbre al escenario mundial"
                  >
                    <picture
                      class="ln-placeholder flex jc-center ai-center relative ratio-3-2"
                    >
                      <source
                        media="(min-width: 1024px)"
                        srcset="https://www.lanacion.com.ar/resizer/49bGzm_PlvwkFdq_mPUWYPu1Ll4=/360x240/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/IRC57MQ7QVGRVJCGMT2TRIXGYM.jpg"
                      />
                      <source
                        media="(min-width: 768px)"
                        srcset="https://www.lanacion.com.ar/resizer/F_QTa-zf0qUhummZ_iSXQg5DJ8M=/768x512/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/IRC57MQ7QVGRVJCGMT2TRIXGYM.jpg"
                      />
                      <img
                        alt="Coronavirus, la sorpresa negativa que suma incertidumbre al escenario mundial"
                        class="image w-100 h-100 flex --cover"
                        decoding="async"
                        fetchpriority="low"
                        loading="lazy"
                        src="https://www.lanacion.com.ar/resizer/vI9F3VNVuHph7r0iT_GuISwhq0s=/351x234/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/IRC57MQ7QVGRVJCGMT2TRIXGYM.jpg"
                      />
                    </picture>
                  </section>
                  <section
                    class="description-container relative flex flex-column"
                    href="/politica/coronavirus-la-sorpresa-negativa-que-suma-incertidumbre-al-escenario-mundial-nid16032021/"
                  >
                    <h2
                      class="text ln-text title --prumo --font-medium --font-m-l"
                    >
                      Coronavirus, la sorpresa negativa que suma incertidumbre al escenario mundial
                    </h2>
                    <div
                      class="flex flex-column gap-4"
                    >
                      <div
                        class="marquee-container flex ai-center"
                        title="Por Carlos Pagni"
                      >
                        <div
                          class="marquee-text flex --font-2xs w-100 flex-column"
                        >
                          <span
                            class="text ln-text marquee"
                          >
                            Por 
                            <strong>
                              Carlos Pagni
                            </strong>
                          </span>
                        </div>
                      </div>
                    </div>
                  </section>
                </a>
              </article>
            </div>
            <div
              class="grid-item --2 --col-8 --col-md-3 --col-lg-3 --col-xl-3"
            >
              <article
                class="ln-card flex flex-column ai-start --m-l --regular"
                data-id="UV32UCCHWZH6LKMZKHGOQJHR4I"
                data-notaid="UV32UCCHWZH6LKMZKHGOQJHR4I"
                data-pos="0003"
                data-source="editor"
              >
                <a
                  class="link ln-link flex flex-column --unstyled"
                  href="/deportes/futbol/boca-juniors/boca-claypole-en-lanus-el-favorito-gano-luego-de-sufrir-en-los-32os-de-final-de-la-copa-argentina-nid16032021/"
                  target="_self"
                  title="Boca - Claypole: en Lanús, el favorito ganó luego de sufrir, en los 32os de final de la Copa Argentina"
                >
                  <section
                    class="media-container"
                    href="/deportes/futbol/boca-juniors/boca-claypole-en-lanus-el-favorito-gano-luego-de-sufrir-en-los-32os-de-final-de-la-copa-argentina-nid16032021/"
                    title="Boca - Claypole: en Lanús, el favorito ganó luego de sufrir, en los 32os de final de la Copa Argentina"
                  >
                    <picture
                      class="ln-placeholder flex jc-center ai-center relative ratio-3-2"
                    >
                      <source
                        media="(min-width: 1024px)"
                        srcset="https://www.lanacion.com.ar/resizer/zjnDs0_VUIbr4qr58x4IZg9O-Qw=/360x240/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/FBBNRZSHRVGLTJP5RPBUMIS7YY.jpg"
                      />
                      <source
                        media="(min-width: 768px)"
                        srcset="https://www.lanacion.com.ar/resizer/n5lSSh3ckD4EkPD89wVn3kUNQ84=/768x512/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/FBBNRZSHRVGLTJP5RPBUMIS7YY.jpg"
                      />
                      <img
                        alt="Boca - Claypole: en Lanús, el favorito ganó luego de sufrir, en los 32os de final de la Copa Argentina"
                        class="image w-100 h-100 flex --cover"
                        decoding="async"
                        fetchpriority="low"
                        loading="lazy"
                        src="https://www.lanacion.com.ar/resizer/yZD_ef4PuFuOAAyIO06CzT0PaqA=/351x234/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/FBBNRZSHRVGLTJP5RPBUMIS7YY.jpg"
                      />
                    </picture>
                  </section>
                  <section
                    class="description-container relative flex flex-column"
                    href="/deportes/futbol/boca-juniors/boca-claypole-en-lanus-el-favorito-gano-luego-de-sufrir-en-los-32os-de-final-de-la-copa-argentina-nid16032021/"
                  >
                    <span
                      class="ln-badge inline-flex w-fit h-fit ai-center z-1 flex-nowrap text-12 rounded-16 bg-danger-600 text-light-0 uppercase py-6 pl-10 pr-8 gap-8 h-24 --live z-2"
                    >
                      <div
                        class="pulse-animation"
                      >
                        <div
                          class="pulse w-5 h-5 bg-light-0 rounded-circle"
                          style="animation-duration: 1s; animation-timing-function: linear; animation-name: pulse-shadow; animation-iteration-count: infinite;"
                        />
                      </div>
                      vivo
                    </span>
                    <h2
                      class="text ln-text title --prumo --font-medium --font-m-l"
                    >
                      Boca - Claypole: en Lanús, el favorito ganó luego de sufrir, en los 32os de final de la Copa Argentina
                    </h2>
                    <div
                      class="flex flex-column gap-4"
                    >
                      <div
                        class="marquee-container flex ai-center"
                        title="Por Celina Chatruc"
                      >
                        <div
                          class="marquee-text flex --font-2xs w-100 flex-column"
                        >
                          <span
                            class="text ln-text marquee"
                          >
                            Por 
                            <strong>
                              Celina Chatruc
                            </strong>
                          </span>
                        </div>
                      </div>
                    </div>
                  </section>
                </a>
              </article>
            </div>
            <div
              class="grid-item --3 --col-8 --col-md-3 --col-lg-3 --col-xl-3"
            >
              <article
                class="ln-card flex flex-column ai-start --m-l --regular --no-media"
                data-id="M3JPASZJAVBIRIZPVCSSVBUAHI"
                data-notaid="M3JPASZJAVBIRIZPVCSSVBUAHI"
                data-pos="0004"
                data-source="editor"
              >
                <a
                  class="link ln-link flex flex-column --unstyled"
                  href="/politica/bullrich-visita-el-calafate-y-presenta-libro-nid11032021/"
                  target="_self"
                  title="Bullrich visita El Calafate y presenta libro"
                >
                  <section
                    class="description-container relative flex flex-column"
                    href="/politica/bullrich-visita-el-calafate-y-presenta-libro-nid11032021/"
                  >
                    <h2
                      class="text ln-text title --prumo --font-medium --font-m-l"
                    >
                      Bullrich visita El Calafate y presenta libro
                    </h2>
                    <h3
                      class="text ln-text subhead --font-s"
                    >
                      Incidentes frente al hotel donde convocó a militantes 
                    </h3>
                    <div
                      class="flex flex-column gap-4"
                    >
                      <div
                        class="marquee-container flex ai-center"
                        title="Por Mariela Arias"
                      >
                        <div
                          class="marquee-text flex --font-2xs w-100 flex-column"
                        >
                          <span
                            class="text ln-text marquee"
                          >
                            Por 
                            <strong>
                              Mariela Arias
                            </strong>
                          </span>
                        </div>
                      </div>
                    </div>
                  </section>
                </a>
              </article>
            </div>
            <div
              class="grid-item --4 --col-8 --col-md-3 --col-lg-3 --col-xl-3"
            >
              <article
                class="ln-card flex flex-column ai-start --m-l --regular --no-media"
                data-id="NSKVK2X7S5FG3MIEEHV4WN6ZI4"
                data-notaid="NSKVK2X7S5FG3MIEEHV4WN6ZI4"
                data-pos="0005"
                data-source="editor"
              >
                <a
                  class="link ln-link flex flex-column --unstyled"
                  href="/sociedad/comunidad/elefante-azul-la-tragica-historia-detras-del-imponente-edificio-abandonado-en-saavedra-nid22042021/"
                  target="_self"
                  title="Elefante Azul: la trágica historia detrás del imponente edificio abandonado en Saavedra"
                >
                  <section
                    class="description-container relative flex flex-column"
                    href="/sociedad/comunidad/elefante-azul-la-tragica-historia-detras-del-imponente-edificio-abandonado-en-saavedra-nid22042021/"
                  >
                    <h2
                      class="text ln-text title --prumo --font-medium --font-m-l"
                    >
                      Elefante Azul: la trágica historia detrás del imponente edificio abandonado en Saavedra
                    </h2>
                  </section>
                </a>
              </article>
            </div>
          </div>
        </section>
      </section>
    </div>
  </div>
</div>
`;

exports[`components - chains - LN10_Caja_canal Tests cases for different layouts should return four articles with layout bn-4-8 1`] = `
<div>
  <div>
    <div
      class="hidden"
      data-module="tema_00"
      id="c0fwX0hVZJbN0f"
    >
      <section
        data-block-name="h_tema-00"
        data-chain-id="c0fwX0hVZJbN0f"
        data-chain-position="00"
        data-diagramacion-id="bn-4-8"
        data-is-block="true"
        data-mrf-recirculation="h_tema-00"
        data-roof="N/A"
        id="tema_00"
      >
        <div
          class="ln-roof --generic"
          roof-container="roof-container"
        >
          <div
            class="--ln-roof-full pt-24 flex jc-between"
          >
            <div
              class="--ln-roof-left"
            >
              <div
                class="flex uppercase ai-center"
                roof-group="left"
                target="_blank"
              >
                <h3
                  class="text ln-text --roof-title --prumo --font-l"
                >
                  Bienestar
                </h3>
              </div>
            </div>
            <div
              class="--ln-roof-right flex overflow-hidden h-100 min-h-36 --generico jc-end ai-center"
              roof-group="right"
            />
          </div>
        </div>
        <section
          class="ln-bngrid pb-16 --bn-4-8 --bienestar"
        >
          <div
            class="grid container-op-top grid --grid-cols-8 --grid-cols-md-12 --grid-cols-lg-12 --grid-cols-xl-12 --gap-sm --grid-ai-stretch"
          >
            <div
              class="grid-item --0 --col-8 --col-md-3 --col-lg-3 --col-xl-3"
            >
              <article
                class="ln-card flex flex-column ai-start --m-l --regular --no-media"
                data-id="NSKVK2X7S5FG3MIEEHV4WN6ZI4"
                data-notaid="NSKVK2X7S5FG3MIEEHV4WN6ZI4"
                data-pos="0001"
                data-source="editor"
              >
                <a
                  class="link ln-link flex flex-column --unstyled"
                  href="/sociedad/comunidad/elefante-azul-la-tragica-historia-detras-del-imponente-edificio-abandonado-en-saavedra-nid22042021/"
                  target="_self"
                  title="Elefante Azul: la trágica historia detrás del imponente edificio abandonado en Saavedra"
                >
                  <section
                    class="description-container relative flex flex-column"
                    href="/sociedad/comunidad/elefante-azul-la-tragica-historia-detras-del-imponente-edificio-abandonado-en-saavedra-nid22042021/"
                  >
                    <h2
                      class="text ln-text title --prumo --font-medium --font-m-l"
                    >
                      Elefante Azul: la trágica historia detrás del imponente edificio abandonado en Saavedra
                    </h2>
                  </section>
                </a>
              </article>
            </div>
            <div
              class="grid-item --1 --col-8 --col-md-3 --col-lg-3 --col-xl-3"
            >
              <article
                class="ln-card flex flex-column ai-start --m-l --regular"
                data-id="6LWA56W2Q5CTLKNU7UEBLABMM4"
                data-notaid="6LWA56W2Q5CTLKNU7UEBLABMM4"
                data-pos="0002"
                data-source="editor"
              >
                <a
                  class="link ln-link flex flex-column --unstyled"
                  href="/politica/coronavirus-la-sorpresa-negativa-que-suma-incertidumbre-al-escenario-mundial-nid16032021/"
                  target="_self"
                  title="Coronavirus, la sorpresa negativa que suma incertidumbre al escenario mundial"
                >
                  <section
                    class="media-container"
                    href="/politica/coronavirus-la-sorpresa-negativa-que-suma-incertidumbre-al-escenario-mundial-nid16032021/"
                    title="Coronavirus, la sorpresa negativa que suma incertidumbre al escenario mundial"
                  >
                    <picture
                      class="ln-placeholder flex jc-center ai-center relative ratio-3-2"
                    >
                      <source
                        media="(min-width: 1024px)"
                        srcset="https://www.lanacion.com.ar/resizer/49bGzm_PlvwkFdq_mPUWYPu1Ll4=/360x240/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/IRC57MQ7QVGRVJCGMT2TRIXGYM.jpg"
                      />
                      <source
                        media="(min-width: 768px)"
                        srcset="https://www.lanacion.com.ar/resizer/F_QTa-zf0qUhummZ_iSXQg5DJ8M=/768x512/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/IRC57MQ7QVGRVJCGMT2TRIXGYM.jpg"
                      />
                      <img
                        alt="Coronavirus, la sorpresa negativa que suma incertidumbre al escenario mundial"
                        class="image w-100 h-100 flex --cover"
                        decoding="async"
                        fetchpriority="low"
                        loading="lazy"
                        src="https://www.lanacion.com.ar/resizer/vI9F3VNVuHph7r0iT_GuISwhq0s=/351x234/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/IRC57MQ7QVGRVJCGMT2TRIXGYM.jpg"
                      />
                    </picture>
                  </section>
                  <section
                    class="description-container relative flex flex-column"
                    href="/politica/coronavirus-la-sorpresa-negativa-que-suma-incertidumbre-al-escenario-mundial-nid16032021/"
                  >
                    <h2
                      class="text ln-text title --prumo --font-medium --font-m-l"
                    >
                      Coronavirus, la sorpresa negativa que suma incertidumbre al escenario mundial
                    </h2>
                    <div
                      class="flex flex-column gap-4"
                    >
                      <div
                        class="marquee-container flex ai-center"
                        title="Por Carlos Pagni"
                      >
                        <div
                          class="marquee-text flex --font-2xs w-100 flex-column"
                        >
                          <span
                            class="text ln-text marquee"
                          >
                            Por 
                            <strong>
                              Carlos Pagni
                            </strong>
                          </span>
                        </div>
                      </div>
                    </div>
                  </section>
                </a>
              </article>
            </div>
            <div
              class="grid-item --2 --col-8 --col-md-3 --col-lg-3 --col-xl-3"
            >
              <article
                class="ln-card flex flex-column ai-start --m-l --regular"
                data-id="UV32UCCHWZH6LKMZKHGOQJHR4I"
                data-notaid="UV32UCCHWZH6LKMZKHGOQJHR4I"
                data-pos="0003"
                data-source="editor"
              >
                <a
                  class="link ln-link flex flex-column --unstyled"
                  href="/deportes/futbol/boca-juniors/boca-claypole-en-lanus-el-favorito-gano-luego-de-sufrir-en-los-32os-de-final-de-la-copa-argentina-nid16032021/"
                  target="_self"
                  title="Boca - Claypole: en Lanús, el favorito ganó luego de sufrir, en los 32os de final de la Copa Argentina"
                >
                  <section
                    class="media-container"
                    href="/deportes/futbol/boca-juniors/boca-claypole-en-lanus-el-favorito-gano-luego-de-sufrir-en-los-32os-de-final-de-la-copa-argentina-nid16032021/"
                    title="Boca - Claypole: en Lanús, el favorito ganó luego de sufrir, en los 32os de final de la Copa Argentina"
                  >
                    <picture
                      class="ln-placeholder flex jc-center ai-center relative ratio-3-2"
                    >
                      <source
                        media="(min-width: 1024px)"
                        srcset="https://www.lanacion.com.ar/resizer/zjnDs0_VUIbr4qr58x4IZg9O-Qw=/360x240/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/FBBNRZSHRVGLTJP5RPBUMIS7YY.jpg"
                      />
                      <source
                        media="(min-width: 768px)"
                        srcset="https://www.lanacion.com.ar/resizer/n5lSSh3ckD4EkPD89wVn3kUNQ84=/768x512/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/FBBNRZSHRVGLTJP5RPBUMIS7YY.jpg"
                      />
                      <img
                        alt="Boca - Claypole: en Lanús, el favorito ganó luego de sufrir, en los 32os de final de la Copa Argentina"
                        class="image w-100 h-100 flex --cover"
                        decoding="async"
                        fetchpriority="low"
                        loading="lazy"
                        src="https://www.lanacion.com.ar/resizer/yZD_ef4PuFuOAAyIO06CzT0PaqA=/351x234/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/FBBNRZSHRVGLTJP5RPBUMIS7YY.jpg"
                      />
                    </picture>
                  </section>
                  <section
                    class="description-container relative flex flex-column"
                    href="/deportes/futbol/boca-juniors/boca-claypole-en-lanus-el-favorito-gano-luego-de-sufrir-en-los-32os-de-final-de-la-copa-argentina-nid16032021/"
                  >
                    <span
                      class="ln-badge inline-flex w-fit h-fit ai-center z-1 flex-nowrap text-12 rounded-16 bg-danger-600 text-light-0 uppercase py-6 pl-10 pr-8 gap-8 h-24 --live z-2"
                    >
                      <div
                        class="pulse-animation"
                      >
                        <div
                          class="pulse w-5 h-5 bg-light-0 rounded-circle"
                          style="animation-duration: 1s; animation-timing-function: linear; animation-name: pulse-shadow; animation-iteration-count: infinite;"
                        />
                      </div>
                      vivo
                    </span>
                    <h2
                      class="text ln-text title --prumo --font-medium --font-m-l"
                    >
                      Boca - Claypole: en Lanús, el favorito ganó luego de sufrir, en los 32os de final de la Copa Argentina
                    </h2>
                    <div
                      class="flex flex-column gap-4"
                    >
                      <div
                        class="marquee-container flex ai-center"
                        title="Por Celina Chatruc"
                      >
                        <div
                          class="marquee-text flex --font-2xs w-100 flex-column"
                        >
                          <span
                            class="text ln-text marquee"
                          >
                            Por 
                            <strong>
                              Celina Chatruc
                            </strong>
                          </span>
                        </div>
                      </div>
                    </div>
                  </section>
                </a>
              </article>
            </div>
            <div
              class="grid-item --3 --col-8 --col-md-3 --col-lg-3 --col-xl-3"
            >
              <article
                class="ln-card flex flex-column ai-start --m-l --regular --no-media"
                data-id="M3JPASZJAVBIRIZPVCSSVBUAHI"
                data-notaid="M3JPASZJAVBIRIZPVCSSVBUAHI"
                data-pos="0004"
                data-source="editor"
              >
                <a
                  class="link ln-link flex flex-column --unstyled"
                  href="/politica/bullrich-visita-el-calafate-y-presenta-libro-nid11032021/"
                  target="_self"
                  title="Bullrich visita El Calafate y presenta libro"
                >
                  <section
                    class="description-container relative flex flex-column"
                    href="/politica/bullrich-visita-el-calafate-y-presenta-libro-nid11032021/"
                  >
                    <h2
                      class="text ln-text title --prumo --font-medium --font-m-l"
                    >
                      Bullrich visita El Calafate y presenta libro
                    </h2>
                    <h3
                      class="text ln-text subhead --font-s"
                    >
                      Incidentes frente al hotel donde convocó a militantes 
                    </h3>
                    <div
                      class="flex flex-column gap-4"
                    >
                      <div
                        class="marquee-container flex ai-center"
                        title="Por Mariela Arias"
                      >
                        <div
                          class="marquee-text flex --font-2xs w-100 flex-column"
                        >
                          <span
                            class="text ln-text marquee"
                          >
                            Por 
                            <strong>
                              Mariela Arias
                            </strong>
                          </span>
                        </div>
                      </div>
                    </div>
                  </section>
                </a>
              </article>
            </div>
          </div>
        </section>
      </section>
    </div>
  </div>
</div>
`;

exports[`components - chains - LN10_Caja_canal Tests cases for different layouts should return four articles with layout canal_1_3_grid 1`] = `
<div>
  <div>
    <div
      class="hidden"
      data-module="tema_00"
      id="c0fwX0hVZJbN0f"
    >
      <section
        data-block-name="h_tema-00"
        data-chain-id="c0fwX0hVZJbN0f"
        data-chain-position="00"
        data-diagramacion-id="canal_1_3_grid"
        data-is-block="true"
        data-mrf-recirculation="h_tema-00"
        data-roof="N/A"
        id="tema_00"
      >
        <div
          class="ln-roof --generic"
          roof-container="roof-container"
        >
          <div
            class="--ln-roof-full pt-24 flex jc-between"
          >
            <div
              class="--ln-roof-left"
            >
              <div
                class="flex uppercase ai-center"
                roof-group="left"
                target="_blank"
              >
                <h3
                  class="text ln-text --roof-title --prumo --font-l"
                >
                  Bienestar
                </h3>
              </div>
            </div>
            <div
              class="--ln-roof-right flex overflow-hidden h-100 min-h-36 --generico jc-end ai-center"
              roof-group="right"
            />
          </div>
        </div>
        <section
          class="ln-bngrid pb-16 --canal_1_3_grid --bienestar"
        >
          <div
            class="grid container-op-top grid --grid-cols-8 --grid-cols-md-12 --grid-cols-lg-12 --grid-cols-xl-12 --gap-sm --grid-ai-stretch"
          >
            <div
              class="grid-item --0 --col-8 --col-md-6 --col-lg-6 --col-xl-6"
            >
              <article
                class="ln-card flex flex-column ai-start --3xl --regular --no-media"
                data-id="NSKVK2X7S5FG3MIEEHV4WN6ZI4"
                data-notaid="NSKVK2X7S5FG3MIEEHV4WN6ZI4"
                data-pos="0001"
                data-source="editor"
              >
                <a
                  class="link ln-link flex flex-column --unstyled"
                  href="/sociedad/comunidad/elefante-azul-la-tragica-historia-detras-del-imponente-edificio-abandonado-en-saavedra-nid22042021/"
                  target="_self"
                  title="Elefante Azul: la trágica historia detrás del imponente edificio abandonado en Saavedra"
                >
                  <section
                    class="description-container relative flex flex-column"
                    href="/sociedad/comunidad/elefante-azul-la-tragica-historia-detras-del-imponente-edificio-abandonado-en-saavedra-nid22042021/"
                  >
                    <h2
                      class="text ln-text title --prumo --font-medium --font-3xl"
                    >
                      Elefante Azul: la trágica historia detrás del imponente edificio abandonado en Saavedra
                    </h2>
                  </section>
                </a>
              </article>
            </div>
            <div
              class="grid-item --1 --col-8 --col-md-6 --col-lg-6 --col-xl-6"
            >
              <article
                class="ln-card flex flex-column ai-start --m-l --regular --tablet-img-right --desktop-img-right"
                data-id="6LWA56W2Q5CTLKNU7UEBLABMM4"
                data-notaid="6LWA56W2Q5CTLKNU7UEBLABMM4"
                data-pos="0002"
                data-source="editor"
              >
                <a
                  class="link ln-link flex flex-column --unstyled"
                  href="/politica/coronavirus-la-sorpresa-negativa-que-suma-incertidumbre-al-escenario-mundial-nid16032021/"
                  target="_self"
                  title="Coronavirus, la sorpresa negativa que suma incertidumbre al escenario mundial"
                >
                  <section
                    class="media-container"
                    href="/politica/coronavirus-la-sorpresa-negativa-que-suma-incertidumbre-al-escenario-mundial-nid16032021/"
                    title="Coronavirus, la sorpresa negativa que suma incertidumbre al escenario mundial"
                  >
                    <picture
                      class="ln-placeholder flex jc-center ai-center relative ratio-3-2"
                    >
                      <source
                        media="(min-width: 1024px)"
                        srcset="https://www.lanacion.com.ar/resizer/49bGzm_PlvwkFdq_mPUWYPu1Ll4=/360x240/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/IRC57MQ7QVGRVJCGMT2TRIXGYM.jpg"
                      />
                      <source
                        media="(min-width: 768px)"
                        srcset="https://www.lanacion.com.ar/resizer/F_QTa-zf0qUhummZ_iSXQg5DJ8M=/768x512/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/IRC57MQ7QVGRVJCGMT2TRIXGYM.jpg"
                      />
                      <img
                        alt="Coronavirus, la sorpresa negativa que suma incertidumbre al escenario mundial"
                        class="image w-100 h-100 flex --cover"
                        decoding="async"
                        fetchpriority="low"
                        loading="lazy"
                        src="https://www.lanacion.com.ar/resizer/vI9F3VNVuHph7r0iT_GuISwhq0s=/351x234/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/IRC57MQ7QVGRVJCGMT2TRIXGYM.jpg"
                      />
                    </picture>
                  </section>
                  <section
                    class="description-container relative flex flex-column"
                    href="/politica/coronavirus-la-sorpresa-negativa-que-suma-incertidumbre-al-escenario-mundial-nid16032021/"
                  >
                    <h2
                      class="text ln-text title --prumo --font-medium --font-m-l"
                    >
                      Coronavirus, la sorpresa negativa que suma incertidumbre al escenario mundial
                    </h2>
                    <div
                      class="flex flex-column gap-4"
                    >
                      <div
                        class="marquee-container flex ai-center"
                        title="Por Carlos Pagni"
                      >
                        <div
                          class="marquee-text flex --font-2xs w-100 flex-column"
                        >
                          <span
                            class="text ln-text marquee"
                          >
                            Por 
                            <strong>
                              Carlos Pagni
                            </strong>
                          </span>
                        </div>
                      </div>
                    </div>
                  </section>
                </a>
              </article>
            </div>
            <div
              class="grid-item --2 --col-8 --col-md-6 --col-lg-6 --col-xl-6"
            >
              <article
                class="ln-card flex flex-column ai-start --m-l --regular --tablet-img-right --desktop-img-right"
                data-id="UV32UCCHWZH6LKMZKHGOQJHR4I"
                data-notaid="UV32UCCHWZH6LKMZKHGOQJHR4I"
                data-pos="0003"
                data-source="editor"
              >
                <a
                  class="link ln-link flex flex-column --unstyled"
                  href="/deportes/futbol/boca-juniors/boca-claypole-en-lanus-el-favorito-gano-luego-de-sufrir-en-los-32os-de-final-de-la-copa-argentina-nid16032021/"
                  target="_self"
                  title="Boca - Claypole: en Lanús, el favorito ganó luego de sufrir, en los 32os de final de la Copa Argentina"
                >
                  <section
                    class="media-container"
                    href="/deportes/futbol/boca-juniors/boca-claypole-en-lanus-el-favorito-gano-luego-de-sufrir-en-los-32os-de-final-de-la-copa-argentina-nid16032021/"
                    title="Boca - Claypole: en Lanús, el favorito ganó luego de sufrir, en los 32os de final de la Copa Argentina"
                  >
                    <picture
                      class="ln-placeholder flex jc-center ai-center relative ratio-3-2"
                    >
                      <source
                        media="(min-width: 1024px)"
                        srcset="https://www.lanacion.com.ar/resizer/zjnDs0_VUIbr4qr58x4IZg9O-Qw=/360x240/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/FBBNRZSHRVGLTJP5RPBUMIS7YY.jpg"
                      />
                      <source
                        media="(min-width: 768px)"
                        srcset="https://www.lanacion.com.ar/resizer/n5lSSh3ckD4EkPD89wVn3kUNQ84=/768x512/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/FBBNRZSHRVGLTJP5RPBUMIS7YY.jpg"
                      />
                      <img
                        alt="Boca - Claypole: en Lanús, el favorito ganó luego de sufrir, en los 32os de final de la Copa Argentina"
                        class="image w-100 h-100 flex --cover"
                        decoding="async"
                        fetchpriority="low"
                        loading="lazy"
                        src="https://www.lanacion.com.ar/resizer/yZD_ef4PuFuOAAyIO06CzT0PaqA=/351x234/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/FBBNRZSHRVGLTJP5RPBUMIS7YY.jpg"
                      />
                    </picture>
                  </section>
                  <section
                    class="description-container relative flex flex-column"
                    href="/deportes/futbol/boca-juniors/boca-claypole-en-lanus-el-favorito-gano-luego-de-sufrir-en-los-32os-de-final-de-la-copa-argentina-nid16032021/"
                  >
                    <span
                      class="ln-badge inline-flex w-fit h-fit ai-center z-1 flex-nowrap text-12 rounded-16 bg-danger-600 text-light-0 uppercase py-6 pl-10 pr-8 gap-8 h-24 --live z-2"
                    >
                      <div
                        class="pulse-animation"
                      >
                        <div
                          class="pulse w-5 h-5 bg-light-0 rounded-circle"
                          style="animation-duration: 1s; animation-timing-function: linear; animation-name: pulse-shadow; animation-iteration-count: infinite;"
                        />
                      </div>
                      vivo
                    </span>
                    <h2
                      class="text ln-text title --prumo --font-medium --font-m-l"
                    >
                      Boca - Claypole: en Lanús, el favorito ganó luego de sufrir, en los 32os de final de la Copa Argentina
                    </h2>
                    <div
                      class="flex flex-column gap-4"
                    >
                      <div
                        class="marquee-container flex ai-center"
                        title="Por Celina Chatruc"
                      >
                        <div
                          class="marquee-text flex --font-2xs w-100 flex-column"
                        >
                          <span
                            class="text ln-text marquee"
                          >
                            Por 
                            <strong>
                              Celina Chatruc
                            </strong>
                          </span>
                        </div>
                      </div>
                    </div>
                  </section>
                </a>
              </article>
            </div>
            <div
              class="grid-item --3 --col-8 --col-md-6 --col-lg-6 --col-xl-6"
            >
              <article
                class="ln-card flex flex-column ai-start --m-l --regular --no-media --tablet-img-right --desktop-img-right"
                data-id="M3JPASZJAVBIRIZPVCSSVBUAHI"
                data-notaid="M3JPASZJAVBIRIZPVCSSVBUAHI"
                data-pos="0004"
                data-source="editor"
              >
                <a
                  class="link ln-link flex flex-column --unstyled"
                  href="/politica/bullrich-visita-el-calafate-y-presenta-libro-nid11032021/"
                  target="_self"
                  title="Bullrich visita El Calafate y presenta libro"
                >
                  <section
                    class="description-container relative flex flex-column"
                    href="/politica/bullrich-visita-el-calafate-y-presenta-libro-nid11032021/"
                  >
                    <h2
                      class="text ln-text title --prumo --font-medium --font-m-l"
                    >
                      Bullrich visita El Calafate y presenta libro
                    </h2>
                    <h3
                      class="text ln-text subhead --font-s"
                    >
                      Incidentes frente al hotel donde convocó a militantes 
                    </h3>
                    <div
                      class="flex flex-column gap-4"
                    >
                      <div
                        class="marquee-container flex ai-center"
                        title="Por Mariela Arias"
                      >
                        <div
                          class="marquee-text flex --font-2xs w-100 flex-column"
                        >
                          <span
                            class="text ln-text marquee"
                          >
                            Por 
                            <strong>
                              Mariela Arias
                            </strong>
                          </span>
                        </div>
                      </div>
                    </div>
                  </section>
                </a>
              </article>
            </div>
          </div>
        </section>
      </section>
    </div>
  </div>
</div>
`;

exports[`components - chains - LN10_Caja_canal Tests cases for different layouts should return three articles with layout canal_1_2_grid 1`] = `
<div>
  <div>
    <div
      class="hidden"
      data-module="tema_00"
      id="c0fwX0hVZJbN0f"
    >
      <section
        data-block-name="h_tema-00"
        data-chain-id="c0fwX0hVZJbN0f"
        data-chain-position="00"
        data-diagramacion-id="canal_1_2_grid"
        data-is-block="true"
        data-mrf-recirculation="h_tema-00"
        data-roof="N/A"
        id="tema_00"
      >
        <div
          class="ln-roof --generic"
          roof-container="roof-container"
        >
          <div
            class="--ln-roof-full pt-24 flex jc-between"
          >
            <div
              class="--ln-roof-left"
            >
              <div
                class="flex uppercase ai-center"
                roof-group="left"
                target="_blank"
              >
                <h3
                  class="text ln-text --roof-title --prumo --font-l"
                >
                  Bienestar
                </h3>
              </div>
            </div>
            <div
              class="--ln-roof-right flex overflow-hidden h-100 min-h-36 --generico jc-end ai-center"
              roof-group="right"
            />
          </div>
        </div>
        <section
          class="ln-bngrid pb-16 --canal_1_2_grid --bienestar"
        >
          <div
            class="grid container-op-top grid --grid-cols-8 --grid-cols-md-12 --grid-cols-lg-12 --grid-cols-xl-12 --gap-sm --grid-ai-stretch"
          >
            <div
              class="grid-item --0 --col-8 --col-md-12 --col-lg-12 --col-xl-12"
            >
              <article
                class="ln-card flex flex-column ai-start --3xl --regular --no-media --tablet-img-right --desktop-img-left"
                data-id="NSKVK2X7S5FG3MIEEHV4WN6ZI4"
                data-notaid="NSKVK2X7S5FG3MIEEHV4WN6ZI4"
                data-pos="0001"
                data-source="editor"
              >
                <a
                  class="link ln-link flex flex-column --unstyled"
                  href="/sociedad/comunidad/elefante-azul-la-tragica-historia-detras-del-imponente-edificio-abandonado-en-saavedra-nid22042021/"
                  target="_self"
                  title="Elefante Azul: la trágica historia detrás del imponente edificio abandonado en Saavedra"
                >
                  <section
                    class="description-container relative flex flex-column"
                    href="/sociedad/comunidad/elefante-azul-la-tragica-historia-detras-del-imponente-edificio-abandonado-en-saavedra-nid22042021/"
                  >
                    <h2
                      class="text ln-text title --prumo --font-medium --font-3xl"
                    >
                      Elefante Azul: la trágica historia detrás del imponente edificio abandonado en Saavedra
                    </h2>
                  </section>
                </a>
              </article>
            </div>
            <div
              class="grid-item --1 --col-8 --col-md-6 --col-lg-6 --col-xl-6"
            >
              <article
                class="ln-card flex flex-column ai-start --m-l --regular --tablet-img-right --desktop-img-right"
                data-id="6LWA56W2Q5CTLKNU7UEBLABMM4"
                data-notaid="6LWA56W2Q5CTLKNU7UEBLABMM4"
                data-pos="0002"
                data-source="editor"
              >
                <a
                  class="link ln-link flex flex-column --unstyled"
                  href="/politica/coronavirus-la-sorpresa-negativa-que-suma-incertidumbre-al-escenario-mundial-nid16032021/"
                  target="_self"
                  title="Coronavirus, la sorpresa negativa que suma incertidumbre al escenario mundial"
                >
                  <section
                    class="media-container"
                    href="/politica/coronavirus-la-sorpresa-negativa-que-suma-incertidumbre-al-escenario-mundial-nid16032021/"
                    title="Coronavirus, la sorpresa negativa que suma incertidumbre al escenario mundial"
                  >
                    <picture
                      class="ln-placeholder flex jc-center ai-center relative ratio-3-2"
                    >
                      <source
                        media="(min-width: 1024px)"
                        srcset="https://www.lanacion.com.ar/resizer/49bGzm_PlvwkFdq_mPUWYPu1Ll4=/360x240/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/IRC57MQ7QVGRVJCGMT2TRIXGYM.jpg"
                      />
                      <source
                        media="(min-width: 768px)"
                        srcset="https://www.lanacion.com.ar/resizer/F_QTa-zf0qUhummZ_iSXQg5DJ8M=/768x512/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/IRC57MQ7QVGRVJCGMT2TRIXGYM.jpg"
                      />
                      <img
                        alt="Coronavirus, la sorpresa negativa que suma incertidumbre al escenario mundial"
                        class="image w-100 h-100 flex --cover"
                        decoding="async"
                        fetchpriority="low"
                        loading="lazy"
                        src="https://www.lanacion.com.ar/resizer/vI9F3VNVuHph7r0iT_GuISwhq0s=/351x234/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/IRC57MQ7QVGRVJCGMT2TRIXGYM.jpg"
                      />
                    </picture>
                  </section>
                  <section
                    class="description-container relative flex flex-column"
                    href="/politica/coronavirus-la-sorpresa-negativa-que-suma-incertidumbre-al-escenario-mundial-nid16032021/"
                  >
                    <h2
                      class="text ln-text title --prumo --font-medium --font-m-l"
                    >
                      Coronavirus, la sorpresa negativa que suma incertidumbre al escenario mundial
                    </h2>
                    <div
                      class="flex flex-column gap-4"
                    >
                      <div
                        class="marquee-container flex ai-center"
                        title="Por Carlos Pagni"
                      >
                        <div
                          class="marquee-text flex --font-2xs w-100 flex-column"
                        >
                          <span
                            class="text ln-text marquee"
                          >
                            Por 
                            <strong>
                              Carlos Pagni
                            </strong>
                          </span>
                        </div>
                      </div>
                    </div>
                  </section>
                </a>
              </article>
            </div>
            <div
              class="grid-item --2 --col-8 --col-md-6 --col-lg-6 --col-xl-6"
            >
              <article
                class="ln-card flex flex-column ai-start --m-l --regular --tablet-img-right --desktop-img-right"
                data-id="UV32UCCHWZH6LKMZKHGOQJHR4I"
                data-notaid="UV32UCCHWZH6LKMZKHGOQJHR4I"
                data-pos="0003"
                data-source="editor"
              >
                <a
                  class="link ln-link flex flex-column --unstyled"
                  href="/deportes/futbol/boca-juniors/boca-claypole-en-lanus-el-favorito-gano-luego-de-sufrir-en-los-32os-de-final-de-la-copa-argentina-nid16032021/"
                  target="_self"
                  title="Boca - Claypole: en Lanús, el favorito ganó luego de sufrir, en los 32os de final de la Copa Argentina"
                >
                  <section
                    class="media-container"
                    href="/deportes/futbol/boca-juniors/boca-claypole-en-lanus-el-favorito-gano-luego-de-sufrir-en-los-32os-de-final-de-la-copa-argentina-nid16032021/"
                    title="Boca - Claypole: en Lanús, el favorito ganó luego de sufrir, en los 32os de final de la Copa Argentina"
                  >
                    <picture
                      class="ln-placeholder flex jc-center ai-center relative ratio-3-2"
                    >
                      <source
                        media="(min-width: 1024px)"
                        srcset="https://www.lanacion.com.ar/resizer/zjnDs0_VUIbr4qr58x4IZg9O-Qw=/360x240/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/FBBNRZSHRVGLTJP5RPBUMIS7YY.jpg"
                      />
                      <source
                        media="(min-width: 768px)"
                        srcset="https://www.lanacion.com.ar/resizer/n5lSSh3ckD4EkPD89wVn3kUNQ84=/768x512/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/FBBNRZSHRVGLTJP5RPBUMIS7YY.jpg"
                      />
                      <img
                        alt="Boca - Claypole: en Lanús, el favorito ganó luego de sufrir, en los 32os de final de la Copa Argentina"
                        class="image w-100 h-100 flex --cover"
                        decoding="async"
                        fetchpriority="low"
                        loading="lazy"
                        src="https://www.lanacion.com.ar/resizer/yZD_ef4PuFuOAAyIO06CzT0PaqA=/351x234/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/FBBNRZSHRVGLTJP5RPBUMIS7YY.jpg"
                      />
                    </picture>
                  </section>
                  <section
                    class="description-container relative flex flex-column"
                    href="/deportes/futbol/boca-juniors/boca-claypole-en-lanus-el-favorito-gano-luego-de-sufrir-en-los-32os-de-final-de-la-copa-argentina-nid16032021/"
                  >
                    <span
                      class="ln-badge inline-flex w-fit h-fit ai-center z-1 flex-nowrap text-12 rounded-16 bg-danger-600 text-light-0 uppercase py-6 pl-10 pr-8 gap-8 h-24 --live z-2"
                    >
                      <div
                        class="pulse-animation"
                      >
                        <div
                          class="pulse w-5 h-5 bg-light-0 rounded-circle"
                          style="animation-duration: 1s; animation-timing-function: linear; animation-name: pulse-shadow; animation-iteration-count: infinite;"
                        />
                      </div>
                      vivo
                    </span>
                    <h2
                      class="text ln-text title --prumo --font-medium --font-m-l"
                    >
                      Boca - Claypole: en Lanús, el favorito ganó luego de sufrir, en los 32os de final de la Copa Argentina
                    </h2>
                    <div
                      class="flex flex-column gap-4"
                    >
                      <div
                        class="marquee-container flex ai-center"
                        title="Por Celina Chatruc"
                      >
                        <div
                          class="marquee-text flex --font-2xs w-100 flex-column"
                        >
                          <span
                            class="text ln-text marquee"
                          >
                            Por 
                            <strong>
                              Celina Chatruc
                            </strong>
                          </span>
                        </div>
                      </div>
                    </div>
                  </section>
                </a>
              </article>
            </div>
          </div>
        </section>
      </section>
    </div>
  </div>
</div>
`;

exports[`components - chains - LN10_Caja_canal Tests cases for different layouts should return two articles with layout bn_1_1_grid 1`] = `
<div>
  <div>
    <div
      class="hidden"
      data-module="tema_00"
      id="c0fwX0hVZJbN0f"
    >
      <section
        data-block-name="h_tema-00"
        data-chain-id="c0fwX0hVZJbN0f"
        data-chain-position="00"
        data-diagramacion-id="bn_1_1_grid"
        data-is-block="true"
        data-mrf-recirculation="h_tema-00"
        data-roof="N/A"
        id="tema_00"
      >
        <div
          class="ln-roof --generic"
          roof-container="roof-container"
        >
          <div
            class="--ln-roof-full pt-24 flex jc-between"
          >
            <div
              class="--ln-roof-left"
            >
              <div
                class="flex uppercase ai-center"
                roof-group="left"
                target="_blank"
              >
                <h3
                  class="text ln-text --roof-title --prumo --font-l"
                >
                  Bienestar
                </h3>
              </div>
            </div>
            <div
              class="--ln-roof-right flex overflow-hidden h-100 min-h-36 --generico jc-end ai-center"
              roof-group="right"
            />
          </div>
        </div>
        <section
          class="ln-bngrid pb-16 --bn_1_1_grid --bienestar"
        >
          <div
            class="grid container-op-top grid --grid-cols-8 --grid-cols-md-12 --grid-cols-lg-12 --grid-cols-xl-12 --gap-sm --grid-ai-stretch"
          >
            <div
              class="grid-item --0 --col-8 --col-md-9 --col-lg-9 --col-xl-9"
            >
              <article
                class="ln-card flex flex-column ai-start --2xl --regular --no-media --tablet-img-right --desktop-img-right"
                data-id="NSKVK2X7S5FG3MIEEHV4WN6ZI4"
                data-notaid="NSKVK2X7S5FG3MIEEHV4WN6ZI4"
                data-pos="0001"
                data-source="editor"
              >
                <a
                  class="link ln-link flex flex-column --unstyled"
                  href="/sociedad/comunidad/elefante-azul-la-tragica-historia-detras-del-imponente-edificio-abandonado-en-saavedra-nid22042021/"
                  target="_self"
                  title="Elefante Azul: la trágica historia detrás del imponente edificio abandonado en Saavedra"
                >
                  <section
                    class="description-container relative flex flex-column"
                    href="/sociedad/comunidad/elefante-azul-la-tragica-historia-detras-del-imponente-edificio-abandonado-en-saavedra-nid22042021/"
                  >
                    <h2
                      class="text ln-text title --prumo --font-medium --font-2xl"
                    >
                      Elefante Azul: la trágica historia detrás del imponente edificio abandonado en Saavedra
                    </h2>
                  </section>
                </a>
              </article>
            </div>
            <div
              class="grid-item --1 --col-8 --col-md-3 --col-lg-3 --col-xl-3"
            >
              <article
                class="ln-card flex flex-column ai-start --m-l --regular"
                data-id="6LWA56W2Q5CTLKNU7UEBLABMM4"
                data-notaid="6LWA56W2Q5CTLKNU7UEBLABMM4"
                data-pos="0002"
                data-source="editor"
              >
                <a
                  class="link ln-link flex flex-column --unstyled"
                  href="/politica/coronavirus-la-sorpresa-negativa-que-suma-incertidumbre-al-escenario-mundial-nid16032021/"
                  target="_self"
                  title="Coronavirus, la sorpresa negativa que suma incertidumbre al escenario mundial"
                >
                  <section
                    class="media-container"
                    href="/politica/coronavirus-la-sorpresa-negativa-que-suma-incertidumbre-al-escenario-mundial-nid16032021/"
                    title="Coronavirus, la sorpresa negativa que suma incertidumbre al escenario mundial"
                  >
                    <picture
                      class="ln-placeholder flex jc-center ai-center relative ratio-3-2"
                    >
                      <source
                        media="(min-width: 1024px)"
                        srcset="https://www.lanacion.com.ar/resizer/49bGzm_PlvwkFdq_mPUWYPu1Ll4=/360x240/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/IRC57MQ7QVGRVJCGMT2TRIXGYM.jpg"
                      />
                      <source
                        media="(min-width: 768px)"
                        srcset="https://www.lanacion.com.ar/resizer/F_QTa-zf0qUhummZ_iSXQg5DJ8M=/768x512/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/IRC57MQ7QVGRVJCGMT2TRIXGYM.jpg"
                      />
                      <img
                        alt="Coronavirus, la sorpresa negativa que suma incertidumbre al escenario mundial"
                        class="image w-100 h-100 flex --cover"
                        decoding="async"
                        fetchpriority="low"
                        loading="lazy"
                        src="https://www.lanacion.com.ar/resizer/vI9F3VNVuHph7r0iT_GuISwhq0s=/351x234/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/IRC57MQ7QVGRVJCGMT2TRIXGYM.jpg"
                      />
                    </picture>
                  </section>
                  <section
                    class="description-container relative flex flex-column"
                    href="/politica/coronavirus-la-sorpresa-negativa-que-suma-incertidumbre-al-escenario-mundial-nid16032021/"
                  >
                    <h2
                      class="text ln-text title --prumo --font-medium --font-m-l"
                    >
                      Coronavirus, la sorpresa negativa que suma incertidumbre al escenario mundial
                    </h2>
                    <div
                      class="flex flex-column gap-4"
                    >
                      <div
                        class="marquee-container flex ai-center"
                        title="Por Carlos Pagni"
                      >
                        <div
                          class="marquee-text flex --font-2xs w-100 flex-column"
                        >
                          <span
                            class="text ln-text marquee"
                          >
                            Por 
                            <strong>
                              Carlos Pagni
                            </strong>
                          </span>
                        </div>
                      </div>
                    </div>
                  </section>
                </a>
              </article>
            </div>
          </div>
        </section>
      </section>
    </div>
  </div>
</div>
`;

exports[`components - chains - LN10_Caja_canal should return an empty array of articles when the layout is empty 1`] = `
<div>
  <div>
    <div
      class="hidden"
      data-module="tema_00"
      id="c0fwX0hVZJbN0f"
    >
      <section
        data-block-name="h_tema-00"
        data-chain-id="c0fwX0hVZJbN0f"
        data-chain-position="00"
        data-diagramacion-id=""
        data-is-block="true"
        data-mrf-recirculation="h_tema-00"
        data-roof="N/A"
        id="tema_00"
      />
    </div>
  </div>
</div>
`;

exports[`components - chains - LN10_Caja_canal should return an empty array of articles when the layout is invalid 1`] = `
<div>
  <div>
    <div
      class="hidden"
      data-module="tema_00"
      id="c0fwX0hVZJbN0f"
    >
      <section
        data-block-name="h_tema-00"
        data-chain-id="c0fwX0hVZJbN0f"
        data-chain-position="00"
        data-diagramacion-id="invalid_layout"
        data-is-block="true"
        data-mrf-recirculation="h_tema-00"
        data-roof="N/A"
        id="tema_00"
      />
    </div>
  </div>
</div>
`;

exports[`components - chains - LN10_Caja_canal should return six articles with layout bn_2_2_grid 1`] = `
<div>
  <div>
    <div
      class="hidden"
      data-module="tema_00"
      id="c0fwX0hVZJbN0f"
    >
      <section
        data-block-name="h_tema-00"
        data-chain-id="c0fwX0hVZJbN0f"
        data-chain-position="00"
        data-diagramacion-id="bn_2_2_grid"
        data-is-block="true"
        data-mrf-recirculation="h_tema-00"
        data-roof="N/A"
        id="tema_00"
      >
        <div
          class="ln-roof --generic"
          roof-container="roof-container"
        >
          <div
            class="--ln-roof-full pt-24 flex jc-between"
          >
            <div
              class="--ln-roof-left"
            >
              <div
                class="flex uppercase ai-center"
                roof-group="left"
                target="_blank"
              >
                <h3
                  class="text ln-text --roof-title --prumo --font-l"
                >
                  Bienestar
                </h3>
              </div>
            </div>
            <div
              class="--ln-roof-right flex overflow-hidden h-100 min-h-36 --generico jc-end ai-center"
              roof-group="right"
            />
          </div>
        </div>
        <section
          class="ln-bngrid pb-16 --bn_2_2_grid --bienestar"
        >
          <div
            class="grid container-op-top grid --grid-cols-8 --grid-cols-md-12 --grid-cols-lg-12 --grid-cols-xl-12 --gap-sm --grid-ai-stretch"
          >
            <div
              class="grid-item --0 --col-8 --col-md-3 --col-lg-3 --col-xl-3"
            >
              <article
                class="ln-card flex flex-column ai-start --m --regular --no-media"
                data-id="NSKVK2X7S5FG3MIEEHV4WN6ZI4"
                data-notaid="NSKVK2X7S5FG3MIEEHV4WN6ZI4"
                data-pos="0001"
                data-source="editor"
              >
                <a
                  class="link ln-link flex flex-column --unstyled"
                  href="/sociedad/comunidad/elefante-azul-la-tragica-historia-detras-del-imponente-edificio-abandonado-en-saavedra-nid22042021/"
                  target="_self"
                  title="Elefante Azul: la trágica historia detrás del imponente edificio abandonado en Saavedra"
                >
                  <section
                    class="description-container relative flex flex-column"
                    href="/sociedad/comunidad/elefante-azul-la-tragica-historia-detras-del-imponente-edificio-abandonado-en-saavedra-nid22042021/"
                  >
                    <h2
                      class="text ln-text title --prumo --font-medium --font-m"
                    >
                      Elefante Azul: la trágica historia detrás del imponente edificio abandonado en Saavedra
                    </h2>
                  </section>
                </a>
              </article>
            </div>
            <div
              class="grid-item --1 --col-8 --col-md-3 --col-lg-3 --col-xl-3"
            >
              <article
                class="ln-card flex flex-column ai-start --m --regular"
                data-id="6LWA56W2Q5CTLKNU7UEBLABMM4"
                data-notaid="6LWA56W2Q5CTLKNU7UEBLABMM4"
                data-pos="0002"
                data-source="editor"
              >
                <a
                  class="link ln-link flex flex-column --unstyled"
                  href="/politica/coronavirus-la-sorpresa-negativa-que-suma-incertidumbre-al-escenario-mundial-nid16032021/"
                  target="_self"
                  title="Coronavirus, la sorpresa negativa que suma incertidumbre al escenario mundial"
                >
                  <section
                    class="media-container"
                    href="/politica/coronavirus-la-sorpresa-negativa-que-suma-incertidumbre-al-escenario-mundial-nid16032021/"
                    title="Coronavirus, la sorpresa negativa que suma incertidumbre al escenario mundial"
                  >
                    <figure
                      class="ln-placeholder flex jc-center ai-center relative ratio-3-2"
                    >
                      <img
                        alt="Coronavirus, la sorpresa negativa que suma incertidumbre al escenario mundial"
                        class="image w-100 h-100 flex --cover"
                        decoding="async"
                        fetchpriority="low"
                        height="513"
                        loading="lazy"
                        src="https://www.lanacion.com.ar/resizer/vI9F3VNVuHph7r0iT_GuISwhq0s=/351x234/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/IRC57MQ7QVGRVJCGMT2TRIXGYM.jpg"
                        srcset="https://www.lanacion.com.ar/resizer/49bGzm_PlvwkFdq_mPUWYPu1Ll4=/360x240/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/IRC57MQ7QVGRVJCGMT2TRIXGYM.jpg 360w, https://www.lanacion.com.ar/resizer/F_QTa-zf0qUhummZ_iSXQg5DJ8M=/768x512/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/IRC57MQ7QVGRVJCGMT2TRIXGYM.jpg 768w, https://www.lanacion.com.ar/resizer/vI9F3VNVuHph7r0iT_GuISwhq0s=/351x234/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/IRC57MQ7QVGRVJCGMT2TRIXGYM.jpg 351w, "
                        width="768"
                      />
                    </figure>
                  </section>
                  <section
                    class="description-container relative flex flex-column"
                    href="/politica/coronavirus-la-sorpresa-negativa-que-suma-incertidumbre-al-escenario-mundial-nid16032021/"
                  >
                    <h2
                      class="text ln-text title --prumo --font-medium --font-m"
                    >
                      Coronavirus, la sorpresa negativa que suma incertidumbre al escenario mundial
                    </h2>
                  </section>
                </a>
              </article>
            </div>
            <div
              class="grid-item --2 --col-8 --col-md-3 --col-lg-3 --col-xl-3"
            >
              <article
                class="ln-card flex flex-column ai-start --m --regular"
                data-id="UV32UCCHWZH6LKMZKHGOQJHR4I"
                data-notaid="UV32UCCHWZH6LKMZKHGOQJHR4I"
                data-pos="0003"
                data-source="editor"
              >
                <a
                  class="link ln-link flex flex-column --unstyled"
                  href="/deportes/futbol/boca-juniors/boca-claypole-en-lanus-el-favorito-gano-luego-de-sufrir-en-los-32os-de-final-de-la-copa-argentina-nid16032021/"
                  target="_self"
                  title="Boca - Claypole: en Lanús, el favorito ganó luego de sufrir, en los 32os de final de la Copa Argentina"
                >
                  <section
                    class="media-container"
                    href="/deportes/futbol/boca-juniors/boca-claypole-en-lanus-el-favorito-gano-luego-de-sufrir-en-los-32os-de-final-de-la-copa-argentina-nid16032021/"
                    title="Boca - Claypole: en Lanús, el favorito ganó luego de sufrir, en los 32os de final de la Copa Argentina"
                  >
                    <figure
                      class="ln-placeholder flex jc-center ai-center relative ratio-3-2"
                    >
                      <img
                        alt="Boca - Claypole: en Lanús, el favorito ganó luego de sufrir, en los 32os de final de la Copa Argentina"
                        class="image w-100 h-100 flex --cover"
                        decoding="async"
                        fetchpriority="low"
                        height="513"
                        loading="lazy"
                        src="https://www.lanacion.com.ar/resizer/yZD_ef4PuFuOAAyIO06CzT0PaqA=/351x234/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/FBBNRZSHRVGLTJP5RPBUMIS7YY.jpg"
                        srcset="https://www.lanacion.com.ar/resizer/zjnDs0_VUIbr4qr58x4IZg9O-Qw=/360x240/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/FBBNRZSHRVGLTJP5RPBUMIS7YY.jpg 360w, https://www.lanacion.com.ar/resizer/n5lSSh3ckD4EkPD89wVn3kUNQ84=/768x512/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/FBBNRZSHRVGLTJP5RPBUMIS7YY.jpg 768w, https://www.lanacion.com.ar/resizer/yZD_ef4PuFuOAAyIO06CzT0PaqA=/351x234/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/FBBNRZSHRVGLTJP5RPBUMIS7YY.jpg 351w, "
                        width="768"
                      />
                    </figure>
                  </section>
                  <section
                    class="description-container relative flex flex-column"
                    href="/deportes/futbol/boca-juniors/boca-claypole-en-lanus-el-favorito-gano-luego-de-sufrir-en-los-32os-de-final-de-la-copa-argentina-nid16032021/"
                  >
                    <span
                      class="ln-badge inline-flex w-fit h-fit ai-center z-1 flex-nowrap text-12 rounded-16 bg-danger-600 text-light-0 uppercase py-6 pl-10 pr-8 gap-8 h-24 --live z-2"
                    >
                      <div
                        class="pulse-animation"
                      >
                        <div
                          class="pulse w-5 h-5 bg-light-0 rounded-circle"
                          style="animation-duration: 1s; animation-timing-function: linear; animation-name: pulse-shadow; animation-iteration-count: infinite;"
                        />
                      </div>
                      vivo
                    </span>
                    <h2
                      class="text ln-text title --prumo --font-medium --font-m"
                    >
                      Boca - Claypole: en Lanús, el favorito ganó luego de sufrir, en los 32os de final de la Copa Argentina
                    </h2>
                  </section>
                </a>
              </article>
            </div>
            <div
              class="grid-item --3 --col-8 --col-md-3 --col-lg-3 --col-xl-3"
            >
              <article
                class="ln-card flex flex-column ai-start --m --regular --no-media"
                data-id="M3JPASZJAVBIRIZPVCSSVBUAHI"
                data-notaid="M3JPASZJAVBIRIZPVCSSVBUAHI"
                data-pos="0004"
                data-source="editor"
              >
                <a
                  class="link ln-link flex flex-column --unstyled"
                  href="/politica/bullrich-visita-el-calafate-y-presenta-libro-nid11032021/"
                  target="_self"
                  title="Bullrich visita El Calafate y presenta libro"
                >
                  <section
                    class="description-container relative flex flex-column"
                    href="/politica/bullrich-visita-el-calafate-y-presenta-libro-nid11032021/"
                  >
                    <h2
                      class="text ln-text title --prumo --font-medium --font-m"
                    >
                      Bullrich visita El Calafate y presenta libro
                    </h2>
                    <h3
                      class="text ln-text subhead --font-s"
                    >
                      Incidentes frente al hotel donde convocó a militantes 
                    </h3>
                  </section>
                </a>
              </article>
            </div>
            <div
              class="grid-item --4 --col-8 --col-md-3 --col-lg-3 --col-xl-3"
            >
              <article
                class="ln-card flex flex-column ai-start --m --regular --no-media"
                data-id="NSKVK2X7S5FG3MIEEHV4WN6ZI4"
                data-notaid="NSKVK2X7S5FG3MIEEHV4WN6ZI4"
                data-pos="0005"
                data-source="editor"
              >
                <a
                  class="link ln-link flex flex-column --unstyled"
                  href="/sociedad/comunidad/elefante-azul-la-tragica-historia-detras-del-imponente-edificio-abandonado-en-saavedra-nid22042021/"
                  target="_self"
                  title="Elefante Azul: la trágica historia detrás del imponente edificio abandonado en Saavedra"
                >
                  <section
                    class="description-container relative flex flex-column"
                    href="/sociedad/comunidad/elefante-azul-la-tragica-historia-detras-del-imponente-edificio-abandonado-en-saavedra-nid22042021/"
                  >
                    <h2
                      class="text ln-text title --prumo --font-medium --font-m"
                    >
                      Elefante Azul: la trágica historia detrás del imponente edificio abandonado en Saavedra
                    </h2>
                  </section>
                </a>
              </article>
            </div>
            <div
              class="grid-item --5 --col-8 --col-md-3 --col-lg-3 --col-xl-3"
            >
              <article
                class="ln-card flex flex-column ai-start --m --regular"
                data-id="6LWA56W2Q5CTLKNU7UEBLABMM4"
                data-notaid="6LWA56W2Q5CTLKNU7UEBLABMM4"
                data-pos="0006"
                data-source="editor"
              >
                <a
                  class="link ln-link flex flex-column --unstyled"
                  href="/politica/coronavirus-la-sorpresa-negativa-que-suma-incertidumbre-al-escenario-mundial-nid16032021/"
                  target="_self"
                  title="Coronavirus, la sorpresa negativa que suma incertidumbre al escenario mundial"
                >
                  <section
                    class="media-container"
                    href="/politica/coronavirus-la-sorpresa-negativa-que-suma-incertidumbre-al-escenario-mundial-nid16032021/"
                    title="Coronavirus, la sorpresa negativa que suma incertidumbre al escenario mundial"
                  >
                    <figure
                      class="ln-placeholder flex jc-center ai-center relative ratio-3-2"
                    >
                      <img
                        alt="Coronavirus, la sorpresa negativa que suma incertidumbre al escenario mundial"
                        class="image w-100 h-100 flex --cover"
                        decoding="async"
                        fetchpriority="low"
                        height="513"
                        loading="lazy"
                        src="https://www.lanacion.com.ar/resizer/vI9F3VNVuHph7r0iT_GuISwhq0s=/351x234/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/IRC57MQ7QVGRVJCGMT2TRIXGYM.jpg"
                        srcset="https://www.lanacion.com.ar/resizer/49bGzm_PlvwkFdq_mPUWYPu1Ll4=/360x240/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/IRC57MQ7QVGRVJCGMT2TRIXGYM.jpg 360w, https://www.lanacion.com.ar/resizer/F_QTa-zf0qUhummZ_iSXQg5DJ8M=/768x512/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/IRC57MQ7QVGRVJCGMT2TRIXGYM.jpg 768w, https://www.lanacion.com.ar/resizer/vI9F3VNVuHph7r0iT_GuISwhq0s=/351x234/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/IRC57MQ7QVGRVJCGMT2TRIXGYM.jpg 351w, "
                        width="768"
                      />
                    </figure>
                  </section>
                  <section
                    class="description-container relative flex flex-column"
                    href="/politica/coronavirus-la-sorpresa-negativa-que-suma-incertidumbre-al-escenario-mundial-nid16032021/"
                  >
                    <h2
                      class="text ln-text title --prumo --font-medium --font-m"
                    >
                      Coronavirus, la sorpresa negativa que suma incertidumbre al escenario mundial
                    </h2>
                  </section>
                </a>
              </article>
            </div>
          </div>
        </section>
      </section>
    </div>
  </div>
</div>
`;
